--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ header{
     flex-direction: column;
     justify-content:space-between;
     flex-wrap: wrap;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     align-items: center;
     padding: 5px;
 }
