--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,23 @@ header{
     padding: 0px;
 }
 
+.text-light {
+    text-decoration: none;
+    font-family: 'Fjalla One', sans-serif;
+    font-size: x-large;
+    margin: 15px;
+}
+
+.navbar-toggler{
+    border: 1px solid red;
+
+}
+
+.navbar-toggler .navbar-toggler-icon {
+    color: white;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28600, 600, 600, 2%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
 h1{
     font-family: 'Fjalla One', sans-serif;
 }
@@ -80,16 +97,20 @@ div{
     grid-template-rows: 1fr;
     gap: 15px;
     width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 
 .header__pag--img{
     display: flex;
     width: 40%;
-    justify-content: start;
+    justify-content:start;
     flex-wrap: wrap;
     margin: 0px;
     padding: 0px;
+    justify-content: center;
+    align-items: center;
 
 }
 
