--- a/css/style.css
+++ b/css/style.css
@@ -839,8 +839,19 @@ footer{
 
 .shadow{
     grid-column: 6/7;
-    grid-row: 1/4;
+    grid-row: 1/5;
     box-shadow: 0px 0px 50px red;
+}
+
+.formulario__boot{
+    grid-column: 6/7;
+    grid-row: 1/5;
+}
+
+.center__cc{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .titulo__contacto{
@@ -889,7 +900,7 @@ footer{
     grid-row: 3/4;
     width: 100%;
     height: 80%;
-    margin-top: 100px;
+    margin-top: 50px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -994,6 +1005,8 @@ footer{
 }
 
 .btn{
+    grid-column: 6/7;
+    grid-row: 4/5;
     background-color: red;
     color: white;
     border: solid rgb(34, 2, 2) 1px;
@@ -1208,7 +1221,7 @@ footer{
     .grid__nosotros{
         display: grid;
         width: 100vw;
-        height: 100vh;
+        height: 100%;
         grid-template-columns: 1fr;
         grid-template-rows: auto;
         gap: 10px;
@@ -1224,21 +1237,23 @@ footer{
         color: white;
         background-color: black;
         text-align: center;
-        width: 100vw;
+        width: 97vw;
     }
     
     .titulo__nosotros--txt{
         display: grid;
         grid-column: 1/2;
-        grid-row:  1/1;
-        width: 100vw;
+        grid-row:  auto;
+        width: 97vw;
     }
     
     .img__iconos{
         grid-column: 1/2;
         grid-row: 2/3;
+        height: 20vh;
+        width: 97vw;
         background-image: url(../resources/iconos.png);
-        background-position: 50% 50%;
+        background-position: 10% 50%;
         background-size:contain;
         background-color: black;
         background-repeat: no-repeat;
@@ -1246,85 +1261,57 @@ footer{
     
     .titulo__marcas{
         display: none;
-        grid-column: 1/2;
-        grid-row: 4/5;
-        width: 100vw;
-        height: 5vh;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        color: white;
-        background-color: black;
     }
     
     
     .speed__marca{
         display: none;
-        grid-column: 1/2;
-        grid-row: 5/6;
-        background-image: url(../resources/speedmarca.png);
-        background-position: 50% 50%;
-        background-size:80%;
-        background-color: black;
-        background-repeat: no-repeat;
     
     }
     
     .hodlmoser__marca{
         display: none;
-        grid-column: 1/2;
-        grid-row: 6/7;
-        background-image: url(../resources/hodlmosermarca.png);
-        background-position: 50% 50%;
-        background-size:80%;
-        background-color: black;
-        background-repeat: no-repeat;
     }
     
     .rena__marca{
         display: none;
-        grid-column: 1/2;
-        grid-row: 7/8;
-        background-image: url(../resources/renaissancemarca.png);
-        background-position: 50% 50%;
-        background-size:80%;   
-        background-color: black;
-        background-repeat: no-repeat;
     }
     
     .block__marca{
         display: none;
-        grid-column: 1/2;
-        grid-row: 8/9;
-        background-image: url(../resources/block-energymarca.png);
-        background-position: 50% 50%;
-        background-size:80%;
-        background-color: black;
-        background-repeat: no-repeat;
     }
     
-    .formulario{
+
+    .shadow{
+        width: 92%;
+        height: 80%;
+        margin: 15px;   
+    }
+
+    .formulario__boot{
+        grid-column: 1/2;
+        grid-row: 4/4;
+        width: 100vw;
+        background-color: rgb(0, 0, 0);
+    }
+
+    .center__cc{
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
+    }
+
+    .none1{
+        display: none;
         grid-column: 1/2;
-        grid-row: 3/4;
-        width: 80vw;
-        height: 50vh;
-        font-size: 16px;
-        margin: 25px;
-        padding: 10px;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        border-radius: 15px;
-        background-color: rgb(95, 21, 21);
-        box-shadow: 0px 0px 15px red;
+        grid-row: auto;
+        height: 20vh;
+        width: 100vw;
+        background-image: none;
+        background-color: black;
     }
     
-    .formulario__card{
-        justify-content: center;
-        align-items: center;
-    }
+
     
     .form__input{
         margin: 5px;
@@ -1333,6 +1320,10 @@ footer{
         width: 70vw;
         border: solid red 1px;
         border-radius: 4px;
+    }
+
+    .form-floating{
+        width: 70vw;
     }
     
     .form__boton{
@@ -1690,7 +1681,7 @@ footer{
         color: white;
         background-color: black;
         text-align: center;
-        width: 100vw;
+        width: 98vw;
     }
     
     .titulo__nosotros--txt{
@@ -1703,6 +1694,7 @@ footer{
     .img__iconos{
         grid-column: 1/2;
         grid-row: 2/3;
+        width: 98vw;
         background-image: url(../resources/iconos.png);
         background-position: 50% 50%;
         background-size:contain;
@@ -1768,22 +1760,27 @@ footer{
         background-color: black;
         background-repeat: no-repeat;
     }
-    
-    .formulario{
+
+    .center__cc{
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
+    }
+    .shadow{
+        width: 92%;
+        height: 80%;
+        margin: 15px;   
+    }
+
+    .form-floating{
+        width: 100%;
+    }
+
+    .formulario__boot{
         grid-column: 1/2;
-        grid-row: 3/4;
-        width: 90vw;
-        height: 50vh;
-        font-size: 16px;
-        padding: 10px;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        border-radius: 15px;
-        background-color: rgb(95, 21, 21);
-        box-shadow: 0px 0px 15px red;
+        grid-row: 4/5;
+        width: 100vw;
+        background-color: rgb(0, 0, 0);
     }
     
     .formulario__card{
@@ -1791,6 +1788,9 @@ footer{
         align-items: center;
     }
     
+    .none1{
+        display: none;
+    }
     .form__input{
         margin: 5px;
         background-color: rgb(161, 35, 35);
