--- a/css/style.css
+++ b/css/style.css
@@ -1384,6 +1384,7 @@ footer{
     flex-direction: column;
     padding: 15px;
     width: 70%;
+    margin: 15px;
     font-size: 20px;
     align-items: center;
     border: solid red 3px;
@@ -1402,6 +1403,7 @@ footer{
     height: 50px;
     color: white;
     font-size: large;
+    margin: 20px;
     border-radius: 30px;
     font-weight: bold;
     background-image: linear-gradient(rgb(255, 0, 0), rgb(92, 16, 16));
