solucion de error diseño en iphone

--- a/css/style.css
+++ b/css/style.css
@@ -274,6 +274,8 @@ footer{
         outline-offset, outline-color,
         background-color;
     transition-duration: .25s;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .icon:hover {
@@ -1292,6 +1294,8 @@ footer{
 
     .icon{
         margin-bottom: 5px;
+        appearance: none;
+        -webkit-appearance: none;
     }
 
     .titulo__productos{
@@ -1755,6 +1759,8 @@ footer{
         margin-top: 0px;
         justify-content:top;
         align-items: center;
+        appearance: none;
+        -webkit-appearance: none;
     }
 
 
