--- a/css/style.css
+++ b/css/style.css
@@ -270,7 +270,7 @@ footer{
     color: #fff;
     border-radius: 50%;
     outline: 2px solid red;
-    border: 2px solid red;
+    border: 2px transparent;
     transition-property:
         outline-offset, outline-color,
         background-color;
@@ -292,11 +292,13 @@ footer{
             #fd5949 45%, #d6249f 60%,
             #285AEB 90%);
     outline-color: #a02d76;
+    outline: 2px solid #a02d76;
 }
 
 .icon--twitter:hover {
     background-color: #1da1f2;
     outline-color: #1da1f2;
+    outline: 2px solid;
 }
 
 .icon--whatsapp:hover {
