solucion de error diseno en iphone

--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,7 @@ footer{
 .icon:hover {
     outline-offset: 4px;
     color: white;
+    -webkit-appearance: none;
 }
 
 .icon:hover i {
@@ -293,6 +294,7 @@ footer{
             #fd5949 45%, #d6249f 60%,
             #285AEB 90%);
     outline-color: #a02d76;
+    -webkit-appearance: none;
 }
 
 .icon--twitter:hover {
