solucion de error diseno en iphone

--- a/css/style.css
+++ b/css/style.css
@@ -275,13 +275,13 @@ footer{
         background-color;
     transition-duration: .25s;
     -webkit-appearance: none;
-    -webkit-border-radius: 50;
 }
 
 .icon:hover {
     outline-offset: 4px;
     color: white;
     -webkit-appearance: none;
+    border-radius: 50;
 }
 
 .icon:hover i {
@@ -295,6 +295,7 @@ footer{
             #285AEB 90%);
     outline-color: #a02d76;
     -webkit-appearance: none;
+    border-radius: 50;
 }
 
 .icon--twitter:hover {
