--- a/css/style.css
+++ b/css/style.css
@@ -274,7 +274,6 @@ footer{
         outline-offset, outline-color,
         background-color;
     transition-duration: .25s;
-    -webkit-border-radius: 50;
 }
 
 .icon:hover {
@@ -1293,6 +1292,24 @@ footer{
 
     .icon{
         margin-bottom: 5px;
+    }
+
+    .icon {
+        width: 50px;
+        height: 50px;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        font-size: 26px;
+        color: #fff;
+        border-radius: 50%;
+        outline: 2px solid red;
+        transition-property:
+            outline-offset, outline-color,
+            background-color;
+        transition-duration: .25s;
+        outline-style: auto;
     }
 
     .titulo__productos{
