--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ div{
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
-    width: 100%;
+    width: 100vw;
 }
 
 .header__nav{
@@ -1202,7 +1202,7 @@ footer{
     }
 
     header{
-        width: auto;
+        width: 100vw;
     }
 
 
