--- a/css/style.css
+++ b/css/style.css
@@ -893,94 +893,91 @@ div {
     width: auto;
     padding: 0px;
     border: 0px; }
-  .footer__gral {
+  footer .footer__gral {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100vw;
     gap: 20px; }
-  .footer__titulonosotros {
-    grid-column: 1/2;
-    grid-row: 1/2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; }
-  .footer__titulo--nosotros {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 10px; }
-  .info__nosotros {
-    grid-column: 1/2;
-    grid-row: 1/2;
-    align-content: center;
-    margin: 10px;
-    justify-content: center; }
-  .ayuda {
-    grid-column: 1/2;
-    grid-row: 2/3;
-    display: flex;
-    margin-left: 0px;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-direction: column; }
-  .footer__tituloayuda {
-    grid-column: 1/2;
-    grid-row: 2/3;
-    display: flex;
-    margin-left: 0px;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-direction: column; }
-  .footer__boton {
-    grid-column: 1/2;
-    grid-row: 3/4;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-  .redes {
-    grid-column: 1/2;
-    grid-row: 4/5;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; }
-  .footer__titulo--redes {
-    grid-column: 1/2;
-    grid-row: 4/5;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-  .icons {
-    grid-column: 1/2;
-    grid-row: 5/6;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 15px; }
-  .icon {
-    margin-bottom: 5px; }
-  .icon {
-    width: 50px;
-    height: 50px;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    font-size: 26px;
-    color: #fff;
-    border-radius: 50%;
-    outline: 1px solid #fff;
-    transition-property: outline-offset, outline-color, background-color;
-    transition-duration: .25s;
-    outline-style: auto; }
+    footer .footer__gral .footer__titulonosotros {
+      grid-column: 1/2;
+      grid-row: 1/2;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; }
+      footer .footer__gral .footer__titulonosotros .footer__titulo--nosotros {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        margin: 10px; }
+    footer .footer__gral .info__nosotros {
+      grid-column: 1/2;
+      grid-row: 1/2;
+      align-content: center;
+      margin: 10px;
+      justify-content: center; }
+    footer .footer__gral .redes {
+      grid-column: 1/2;
+      grid-row: 4/5;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; }
+      footer .footer__gral .redes .footer__titulo--redes {
+        grid-column: 1/2;
+        grid-row: 4/5;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+      footer .footer__gral .redes .icons {
+        grid-column: 1/2;
+        grid-row: 5/6;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 10px; }
+        footer .footer__gral .redes .icons .icon {
+          width: 50px;
+          height: 50px;
+          display: inline-flex;
+          align-items: center;
+          justify-content: center;
+          text-decoration: none;
+          font-size: 26px;
+          color: #fff;
+          border-radius: 50%;
+          outline: 1px solid #fff;
+          transition-property: outline-offset, outline-color, background-color;
+          transition-duration: .25s;
+          outline-style: auto; }
+    footer .footer__gral .ayuda {
+      grid-column: 1/2;
+      grid-row: 2/3;
+      display: flex;
+      margin-left: 0px;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      flex-direction: column; }
+      footer .footer__gral .ayuda .footer__tituloayuda {
+        grid-column: 1/2;
+        grid-row: 2/3;
+        display: flex;
+        margin-left: 0px;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        flex-direction: column; }
+      footer .footer__gral .ayuda .footer__boton {
+        grid-column: 1/2;
+        grid-row: 3/4;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
   .titulo__productos {
     width: auto;
     flex-direction: column;
