agrego nesting y variables

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,10 @@
 @import "footer";
 @import "header";
 @import "main-pages/index";
+@import "main-pages/tienda";
+@import "main-pages/eventos";
+
+
 *{
     margin: 0px;
     padding: 0px;
@@ -63,331 +67,6 @@ div{
 }
 
 
-
-/* TIENDA */
-
-.main__tienda{
-    display: flex;
-    background-color: $color-principal;
-    width: 100vw;
-    margin: 0px;
-    justify-content: center;
-    flex-direction: column;
-    align-items:center ;
-}
-
-.main__portada{
-    display: grid;
-    width: 100vw;
-    height: 65vh;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-}
-
-.portada__prod{
-    grid-column: 1/2;
-    grid-row: 1/2;
-    background-image: url(../resources/PORTADA-NUESTROS-PRODUCTOS.jpg);
-    background-position: center;
-    background-size:cover;
-    height: 60vh;
-    background-repeat: no-repeat;
-}
-
-
-.productos__grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 15px;
-    margin: 15px;
-    width: 95vw;
-
-    
-}
-
-.productos__img{
-    width: 250px;
-    height: 250px;
-}
-
-.main__card{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: rgb(255, 39, 39) solid 2px;
-    background-color: $color-principal;
-    border-radius: 10px;
-    padding: 16px;
-}
-
-.titulo__productos{
-    display: flex;
-    justify-content: center;
-    color: white;
-    margin: 10px;
-    align-items: center;
-}
-
-.boton__tienda{
-    width: 150px;
-    height: 30px;
-    margin: 10px;
-    border: white solid 1px;
-    color: white;
-    font-weight: bold;
-    background-image: linear-gradient(rgb(255, 0, 0), rgb(92, 16, 16));
-    border-radius: 15px;
-}
-
-.boton__tienda p{
-    font-size:medium ;
-}
-
-.ss{
-    color: $color-principal;
-}
-
-
-.boton__tienda:hover{
-    width: 150px;
-    height: 30px;
-    margin: 10px;
-    border: white solid 1px;
-    color: white;
-    font-weight: bold;
-    background-image: linear-gradient(rgb(92, 16, 16), rgb(255, 0, 0));
-    border-radius: 15px;
-}
-
-
-
-.producto__texto{
-    color: white;
-    margin: 5px;
-}
-
-.card__uno{
-    grid-column: 1/2;
-    grid-row: 1/2;
-}
-
-.card__uno:hover{
-    transform: scale(1.06, 1.06);
-}
-
-.card__dos{
-    grid-column: 2/3;
-    grid-row: 1/2;
-}
-
-.card__dos:hover{
-    transform: scale(1.06, 1.06);
-}
-
-.card__tres{
-    grid-column: 3/4;
-    grid-row: 1/2;
-}
-
-.card__tres:hover{
-    transform: scale(1.06, 1.06);
-}
-
-.card__cuatro{
-    grid-column: 4/5;
-    grid-row: 1/2;
-}
-
-.card__cuatro:hover{
-    transform: scale(1.06, 1.06);
-}
-
-.card__cinco{
-    grid-column: 1/2;
-    grid-row: 2/3;
-}
-
-.card__cinco:hover{
-    transform: scale(1.06, 1.06);
-}
-
-.card__seis{
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-
-.card__seis:hover{
-    transform: scale(1.06, 1.06);
-}
-
-.card__siete{
-    grid-column: 3/4;
-    grid-row: 2/3;
-}
-
-.card__siete:hover{
-    transform: scale(1.06, 1.06);
-}
-
-.card__ocho{
-    grid-column: 4/5;
-    grid-row: 2/3;
-}
-
-.card__ocho:hover{
-    transform: scale(1.06, 1.06);
-}
-
-/* EVENTOS */
-
-.eventos{
-    display: grid;
-    width: 100vw; 
-    height: 100vh;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 2fr 2fr 1fr 2fr;
-    gap: 10px;
-    padding: 0px;
-    background-color: $color-principal;
-}
-
-.eventos__img{
-    width: 50%;
-}
-
-.evento__1{
-    grid-column: 3/4;
-    grid-row: 1/3;
-    background-image: url(../resources/eventos-1.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-.evento__1:hover{
-    transform: scale(1.10, 1.10);
-    transition: all 0.5s;
-}
-
-.evento__2{
-    grid-column: 2/3;
-    grid-row: 4/5;
-    background-image: url(../resources/eventos-2.jpg);
-    background-position: 50% 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.evento__2:hover{
-    transform: scale(1.10, 1.10);
-    transition: all 0.5s;
-}
-
-.evento__3{
-    grid-column: 2/3;
-    grid-row: 2/3;
-    background-image: url(../resources/eventos-3.jpg);
-    background-position: 50% 50%;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.evento__3:hover{
-    transform: scale(1.10, 1.10);
-    transition: all 0.5s;
-}
-
-.evento__3:hover{
-    transform: scale(1.10, 1.10);
-    transition: all 0.5s;
-}
-
-.evento__4{
-    grid-column: 1/3;
-    grid-row: 1/2;
-    background-image: url(../resources/eventos-10.jpg);
-    background-position: center;
-    background-size:cover;
-    background-repeat: no-repeat;
-}
-
-.evento__4:hover{
-    transform: scale(1.10, 1.10);
-    transition: all 0.5s;
-}
-
-
-.evento__5{
-    grid-column: 1/2;
-    grid-row: 3/5;
-    background-image: url(../resources/eventos-5.jpg);
-    background-position: center;
-    background-size:cover;
-    background-repeat: no-repeat;
-}
-
-.evento__5:hover{
-    transform: scale(1.10, 1.10);
-    transition: all 0.5s;
-}
-
-.evento__6{
-    grid-column: 1/2;
-    grid-row: 2/3;
-    background-image: url(../resources/eventos-6.jpg);
-    background-position: 50% 58%;
-    background-size:cover;
-    background-repeat: no-repeat;
-}
-
-.evento__6:hover{
-    transform: scale(1.10, 1.10);
-    transition: all 0.5s;
-}
-
-.evento__7{
-    grid-column: 2/4;
-    grid-row: 3/4;
-    background-image: url(../resources/eventos-7.jpg);
-    background-position: 50% 45%;
-    background-size:100%;
-    background-repeat: no-repeat;
-}
-
-.evento__7:hover{
-    transform: scale(1.10, 1.10);
-    transition: all 0.5s;
-}
-
-.evento__8{
-    grid-column: 3/4;
-    grid-row: 4/5;
-    background-image: url(../resources/eventos-8.jpg);
-    background-position: 50% 20%;
-    background-size:cover;
-    background-repeat: no-repeat;
-}
-
-.evento__8:hover{
-    transform: scale(1.10, 1.10);
-    transition: all 0.5s;
-}
-
-.titulo__evento{
-    display: flex;
-    width: 100vw;
-    height: 10vh;
-    font-size: 50px;
-    font: bolder;
-    color: white;
-    background-color: $color-principal;
-    justify-content: center;
-    align-items: center;
-    letter-spacing: 0.07em;
-    line-height: 1;
-    margin: 0px;
-}
 
 /* SPEED APP */
 
