--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,30 @@
+@charset "UTF-8";
 /* COLORES */
+/* LETRAS */
+/* TAMAÑO LETRA */
+/* CONDICIONAL IF */
+.color-twitter {
+  outline-color: #1da1f2; }
+
+.color-instagram {
+  outline-color: #a02d76; }
+
+.color-whatsapp {
+  outline-color: #15e61f; }
+
+.color-github {
+  outline-color: #ab11ca; }
+
+/* EXTEND */
+.background-cover, .eventos .evento__1, .eventos .evento__2, .eventos .evento__3, .eventos .evento__4, .eventos .evento__5, .eventos .evento__6, .eventos .evento__7, .eventos .evento__8 {
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.centrar, .header__pag, .titulo__evento, .info__texto, .boton__app, .boton__app:hover, .center__cc, .titulo__nosotros, .titulo__marcas, .formulario, .formulario__card {
+  justify-content: center;
+  align-items: center; }
+
+/* mixing */
 /* FOOTER */
 footer {
   width: 100vw;
@@ -89,10 +115,10 @@ footer {
         grid-column: 2/3;
         grid-row: 1/2;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        flex-wrap: wrap;
-        flex-direction: column; }
+        flex-wrap: wrap; }
         footer .footer__gral .ayuda .footer__tituloayuda .footer__titulo--ayuda {
           display: flex;
           flex-wrap: wrap;
@@ -107,7 +133,7 @@ footer {
           padding: 0px; }
           footer .footer__gral .ayuda .footer__tituloayuda .footer__titulo--preguntas .footer__preguntas {
             list-style: none;
-            font-family: 'Roboto', sans-serif;
+            font-family: "Roboto", sans-serif;
             color: black;
             text-align: left;
             text-align: center;
@@ -115,7 +141,7 @@ footer {
             margin: 1px;
             color: white; }
             footer .footer__gral .ayuda .footer__tituloayuda .footer__titulo--preguntas .footer__preguntas a {
-              font-family: 'Roboto', sans-serif;
+              font-family: "Roboto", sans-serif;
               color: black;
               text-align: center;
               flex-direction: column;
@@ -138,7 +164,7 @@ footer {
         border-radius: 20px;
         background-color: black;
         border: 1px solid red;
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
         color: white;
         font-size: large; }
         footer .footer__gral .ayuda .boton__soporte:hover {
@@ -153,7 +179,7 @@ footer {
           border-radius: 20px;
           background-color: #420808;
           border: 1px solid red;
-          font-family: 'Roboto', sans-serif;
+          font-family: "Roboto", sans-serif;
           color: white;
           font-size: large; }
 
@@ -195,7 +221,7 @@ header {
         flex-wrap: wrap;
         list-style: none; }
         header .header .header__nav .header__lista .header__item {
-          font-family: 'Fjalla One', sans-serif;
+          font-family: "Fjalla One", sans-serif;
           justify-content: center; }
           header .header .header__nav .header__lista .header__item a {
             text-decoration: none;
@@ -209,9 +235,7 @@ header {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
   gap: 15px;
-  width: 100%;
-  justify-content: center;
-  align-items: center; }
+  width: 100%; }
   .header__pag .header__pag--img {
     display: flex;
     width: 60%;
@@ -223,6 +247,29 @@ header {
       height: 150px;
       padding: 10px; }
 
+/* CONDICIONAL IF */
+.color-twitter {
+  outline-color: #1da1f2; }
+
+.color-instagram {
+  outline-color: #a02d76; }
+
+.color-whatsapp {
+  outline-color: #15e61f; }
+
+.color-github {
+  outline-color: #ab11ca; }
+
+/* EXTEND */
+.background-cover, .eventos .evento__1, .eventos .evento__2, .eventos .evento__3, .eventos .evento__4, .eventos .evento__5, .eventos .evento__6, .eventos .evento__7, .eventos .evento__8 {
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.centrar, .header__pag, .titulo__evento, .info__texto, .boton__app, .boton__app:hover, .center__cc, .titulo__nosotros, .titulo__marcas, .formulario, .formulario__card {
+  justify-content: center;
+  align-items: center; }
+
+/* mixing */
 .info__speed {
   display: flex;
   flex-wrap: wrap;
@@ -260,8 +307,8 @@ header {
   background-color: black;
   width: 100vw;
   margin: 0px;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
   align-items: center; }
   .main__tienda .titulo__productos {
     display: flex;
@@ -363,8 +410,6 @@ header {
   font: bolder;
   color: white;
   background-color: black;
-  justify-content: center;
-  align-items: center;
   letter-spacing: 0.07em;
   line-height: 1;
   margin: 0px; }
@@ -382,9 +427,7 @@ header {
     grid-column: 3/4;
     grid-row: 1/3;
     background-image: url(../resources/eventos-1.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat; }
+    background-position: center; }
     .eventos .evento__1:hover {
       transform: scale(1.1, 1.1);
       transition: all 0.5s; }
@@ -392,9 +435,7 @@ header {
     grid-column: 2/3;
     grid-row: 4/5;
     background-image: url(../resources/eventos-2.jpg);
-    background-position: 50% 100%;
-    background-size: cover;
-    background-repeat: no-repeat; }
+    background-position: 50% 100%; }
     .eventos .evento__2:hover {
       transform: scale(1.1, 1.1);
       transition: all 0.5s; }
@@ -402,9 +443,7 @@ header {
     grid-column: 2/3;
     grid-row: 2/3;
     background-image: url(../resources/eventos-3.jpg);
-    background-position: 50% 50%;
-    background-size: cover;
-    background-repeat: no-repeat; }
+    background-position: 50% 50%; }
     .eventos .evento__3:hover {
       transform: scale(1.1, 1.1);
       transition: all 0.5s; }
@@ -415,9 +454,7 @@ header {
     grid-column: 1/3;
     grid-row: 1/2;
     background-image: url(../resources/eventos-10.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat; }
+    background-position: center; }
     .eventos .evento__4:hover {
       transform: scale(1.1, 1.1);
       transition: all 0.5s; }
@@ -425,9 +462,7 @@ header {
     grid-column: 1/2;
     grid-row: 3/5;
     background-image: url(../resources/eventos-5.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat; }
+    background-position: center; }
     .eventos .evento__5:hover {
       transform: scale(1.1, 1.1);
       transition: all 0.5s; }
@@ -435,9 +470,7 @@ header {
     grid-column: 1/2;
     grid-row: 2/3;
     background-image: url(../resources/eventos-6.jpg);
-    background-position: 50% 58%;
-    background-size: cover;
-    background-repeat: no-repeat; }
+    background-position: 50% 58%; }
     .eventos .evento__6:hover {
       transform: scale(1.1, 1.1);
       transition: all 0.5s; }
@@ -445,9 +478,7 @@ header {
     grid-column: 2/4;
     grid-row: 3/4;
     background-image: url(../resources/eventos-7.jpg);
-    background-position: 50% 45%;
-    background-size: 100%;
-    background-repeat: no-repeat; }
+    background-position: 50% 45%; }
     .eventos .evento__7:hover {
       transform: scale(1.1, 1.1);
       transition: all 0.5s; }
@@ -455,9 +486,7 @@ header {
     grid-column: 3/4;
     grid-row: 4/5;
     background-image: url(../resources/eventos-8.jpg);
-    background-position: 50% 20%;
-    background-size: cover;
-    background-repeat: no-repeat; }
+    background-position: 50% 20%; }
     .eventos .evento__8:hover {
       transform: scale(1.1, 1.1);
       transition: all 0.5s; }
@@ -471,7 +500,7 @@ body {
 
 .text-light {
   text-decoration: none;
-  font-family: 'Fjalla One', sans-serif;
+  font-family: "Fjalla One", sans-serif;
   font-size: x-large;
   margin: 15px; }
 
@@ -483,16 +512,16 @@ body {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28600, 600, 600, 2%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e"); }
 
 h1 {
-  font-family: 'Fjalla One', sans-serif; }
+  font-family: "Fjalla One", sans-serif; }
 
 h2 {
-  font-family: 'Fjalla One', sans-serif; }
+  font-family: "Fjalla One", sans-serif; }
 
 h3 {
-  font-family: 'Fjalla One', sans-serif; }
+  font-family: "Fjalla One", sans-serif; }
 
 p {
-  font-family: 'Roboto', sans-serif; }
+  font-family: "Roboto", sans-serif; }
 
 div {
   font-size: 16px; }
@@ -533,8 +562,6 @@ div {
   grid-column: 2/3;
   grid-row: 1/2;
   background-color: black;
-  justify-content: center;
-  align-items: center;
   color: white; }
 
 .qr__app {
@@ -548,12 +575,12 @@ div {
 
 .info__texto--cuadro {
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 15px;
   width: 70%;
   font-size: 20px;
-  align-items: center;
   border: solid red 3px; }
 
 .app__texto {
@@ -562,8 +589,6 @@ div {
 
 .boton__app {
   display: flex;
-  justify-content: center;
-  align-items: center;
   width: 300px;
   height: 50px;
   color: white;
@@ -574,8 +599,6 @@ div {
 
 .boton__app:hover {
   display: flex;
-  justify-content: center;
-  align-items: center;
   width: 300px;
   height: 50px;
   color: white;
@@ -613,9 +636,7 @@ div {
   grid-row: 1/5; }
 
 .center__cc {
-  display: flex;
-  justify-content: center;
-  align-items: center; }
+  display: flex; }
 
 .titulo__contacto {
   color: white; }
@@ -627,8 +648,6 @@ div {
   display: grid;
   grid-column: 1/5;
   grid-row: 1/1;
-  justify-content: center;
-  align-items: center;
   color: white;
   margin: 10px;
   background-color: black;
@@ -658,8 +677,6 @@ div {
   width: 100%;
   height: 80%;
   margin-top: 50px;
-  justify-content: center;
-  align-items: center;
   text-align: center;
   color: white;
   background-color: black; }
@@ -710,8 +727,6 @@ div {
 .formulario {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
   grid-column: 6/7;
   grid-row: 1/3;
   height: 30vw;
@@ -723,10 +738,6 @@ div {
   border-radius: 15px;
   background-color: #5f1515;
   box-shadow: 0px 0px 50px red; }
-
-.formulario__card {
-  justify-content: center;
-  align-items: center; }
 
 .none1 {
   grid-column: 1/2;
@@ -784,9 +795,9 @@ div {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     gap: 20px; }
     footer .footer__gral .footer__titulonosotros {
       grid-column: 1/2;
@@ -874,19 +885,19 @@ div {
       grid-row: 2/3;
       display: flex;
       margin-left: 0px;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      flex-wrap: wrap;
-      flex-direction: column; }
+      flex-wrap: wrap; }
       footer .footer__gral .ayuda .footer__tituloayuda {
         grid-column: 1/2;
         grid-row: 2/3;
         display: flex;
         margin-left: 0px;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        flex-wrap: wrap;
-        flex-direction: column; }
+        flex-wrap: wrap; }
       footer .footer__gral .ayuda .footer__boton {
         grid-column: 1/2;
         grid-row: 3/4;
@@ -1030,13 +1041,13 @@ div {
       color: white; }
       .info__app .info__texto--cuadro {
         display: flex;
-        justify-content: center;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         padding: 15px;
         width: 70%;
         margin: 15px;
         font-size: 20px;
-        align-items: center;
         border: solid red 3px; }
       .info__app .info__texto .app__texto {
         text-align: center;
@@ -1138,10 +1149,10 @@ div {
         grid-row: 1/2;
         display: flex;
         margin-left: 0px;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        flex-wrap: wrap;
-        flex-direction: column; }
+        flex-wrap: wrap; }
         .footer__gral .ayuda .footer__tituloayuda .footer__titulo--ayuda {
           display: flex;
           flex-wrap: wrap;
@@ -1329,12 +1340,12 @@ div {
       color: white; }
       .info__app .info__texto .info__texto--cuadro {
         display: flex;
-        justify-content: center;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         padding: 15px;
         width: 70%;
         font-size: 20px;
-        align-items: center;
         border: solid red 3px; }
       .info__app .info__texto .app__texto {
         text-align: center;
