--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,12 @@
 /* COLORES */
 $color-principal: black;
 $color-secundario: red;
+
+/* LETRAS */
+$font-principal: 'Roboto', sans-serif;
+$font-titulos: 'Fjalla One', sans-serif;
+
+/* TAMAÑO LETRA */
+
+$contenido: 1rem;
+$titulos: $contenido *2;
