--- a/scss/main-pages/_eventos.scss
+++ b/scss/main-pages/_eventos.scss
@@ -8,8 +8,7 @@
     font: bolder;
     color: white;
     background-color: $color-principal;
-    justify-content: center;
-    align-items: center;
+    @extend .centrar;
     letter-spacing: 0.07em;
     line-height: 1;
     margin: 0px;
@@ -30,8 +29,7 @@
         grid-row: 1/3;
         background-image: url(../resources/eventos-1.jpg);
         background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
+        @extend .background-cover;
 
         &:hover{
             transform: scale(1.10, 1.10);
@@ -45,8 +43,7 @@
         grid-row: 4/5;
         background-image: url(../resources/eventos-2.jpg);
         background-position: 50% 100%;
-        background-size: cover;
-        background-repeat: no-repeat;
+        @extend .background-cover;
 
         &:hover{
             transform: scale(1.10, 1.10);
@@ -61,8 +58,7 @@
         grid-row: 2/3;
         background-image: url(../resources/eventos-3.jpg);
         background-position: 50% 50%;
-        background-size: cover;
-        background-repeat: no-repeat;
+        @extend .background-cover;
 
         &:hover{
             transform: scale(1.10, 1.10);
@@ -78,12 +74,11 @@
     
     
     .evento__4{
+        @extend .background-cover;
         grid-column: 1/3;
         grid-row: 1/2;
         background-image: url(../resources/eventos-10.jpg);
         background-position: center;
-        background-size:cover;
-        background-repeat: no-repeat;
 
         &:hover{
             transform: scale(1.10, 1.10);
@@ -99,8 +94,7 @@
         grid-row: 3/5;
         background-image: url(../resources/eventos-5.jpg);
         background-position: center;
-        background-size:cover;
-        background-repeat: no-repeat;
+        @extend .background-cover;
 
         &:hover{
             transform: scale(1.10, 1.10);
@@ -115,8 +109,7 @@
         grid-row: 2/3;
         background-image: url(../resources/eventos-6.jpg);
         background-position: 50% 58%;
-        background-size:cover;
-        background-repeat: no-repeat;
+        @extend .background-cover;
 
         &:hover{
             transform: scale(1.10, 1.10);
@@ -131,8 +124,7 @@
         grid-row: 3/4;
         background-image: url(../resources/eventos-7.jpg);
         background-position: 50% 45%;
-        background-size:100%;
-        background-repeat: no-repeat;
+        @extend .background-cover;
 
         &:hover{
             transform: scale(1.10, 1.10);
@@ -147,8 +139,7 @@
         grid-row: 4/5;
         background-image: url(../resources/eventos-8.jpg);
         background-position: 50% 20%;
-        background-size:cover;
-        background-repeat: no-repeat;
+        @extend .background-cover;
 
         &:hover{
             transform: scale(1.10, 1.10);
