--- a/scss/main-pages/_tienda.scss
+++ b/scss/main-pages/_tienda.scss
@@ -5,9 +5,7 @@
     background-color: $color-principal;
     width: 100vw;
     margin: 0px;
-    justify-content: center;
-    flex-direction: column;
-    align-items:center ;
+    @include flex(column, center, center);
 
     .titulo__productos{
         display: flex;
@@ -27,9 +25,7 @@
 
         .main__card{
             display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            @include flex(column, center, center);
             border: rgb(255, 39, 39) solid 2px;
             background-color: $color-principal;
             border-radius: 10px;
