--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @import "variables";
 @import "footer";
 @import "header";
+@import "operators";
 @import "main-pages/index";
 @import "main-pages/tienda";
 @import "main-pages/eventos";
@@ -19,7 +20,7 @@ body{
 
 .text-light {
     text-decoration: none;
-    font-family: 'Fjalla One', sans-serif;
+    font-family: $font-titulos;
     font-size: x-large;
     margin: 15px;
 }
@@ -35,19 +36,19 @@ body{
 }
 
 h1{
-    font-family: 'Fjalla One', sans-serif;
+    font-family: $font-titulos;
 }
 
 h2{
-    font-family: 'Fjalla One', sans-serif;
+    font-family: $font-titulos;
 }
 
 h3{
-    font-family: 'Fjalla One', sans-serif;
+    font-family: $font-titulos;
 }
 
 p{
-    font-family: 'Roboto', sans-serif;
+    font-family: $font-principal;
 }
 
 div{
@@ -99,8 +100,7 @@ div{
     grid-column: 2/3;
     grid-row: 1/2;
     background-color: $color-principal;
-    justify-content: center;
-    align-items: center;
+    @extend .centrar;
     color: white;
 }
 
@@ -116,12 +116,10 @@ div{
 
 .info__texto--cuadro{
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    @include flex(column, center, center);
     padding: 15px;
     width: 70%;
     font-size: 20px;
-    align-items: center;
     border: solid $color-secundario 3px;
 }
 
@@ -132,8 +130,7 @@ div{
 
 .boton__app{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    @extend .centrar;
     width: 300px;
     height: 50px;
     color: white;
@@ -145,8 +142,7 @@ div{
 
 .boton__app:hover{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    @extend .centrar;
     width: 300px;
     height: 50px;
     color: white;
@@ -193,8 +189,7 @@ div{
 
 .center__cc{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    @extend .centrar;
 }
 
 .titulo__contacto{
@@ -210,8 +205,7 @@ div{
     display: grid;
     grid-column: 1/5;
     grid-row: 1/1;
-    justify-content: center;
-    align-items: center;
+    @extend .centrar;
     color: white;
     margin: 10px;
     background-color: $color-principal;
@@ -244,8 +238,7 @@ div{
     width: 100%;
     height: 80%;
     margin-top: 50px;
-    justify-content: center;
-    align-items: center;
+    @extend .centrar;
     text-align: center;
     color: white;
     background-color: $color-principal;
@@ -304,8 +297,7 @@ div{
 .formulario{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    @extend .centrar;
     grid-column: 6/7;
     grid-row: 1/3;
     height: 30vw;
@@ -320,8 +312,7 @@ div{
 }
 
 .formulario__card{
-    justify-content: center;
-    align-items: center;
+    @extend .centrar;
 }
 
 .none1{
