--- a/css/style.css
+++ b/css/style.css
@@ -1070,19 +1070,19 @@ div {
         border-radius: 30px;
         font-weight: bold;
         background-image: linear-gradient(red, #5c1010); }
-      .info__app .boton__cuadro--app:hover {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 300px;
-        height: 50px;
-        color: white;
-        font-size: large;
-        border-radius: 30px;
-        font-weight: bold;
-        background-image: linear-gradient(#5c1010, red);
-        transform: scale(1.1, 1.1);
-        transition: all 0.5s; }
+        .info__app .boton__cuadro--app .boton__app:hover {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 300px;
+          height: 50px;
+          color: white;
+          font-size: large;
+          border-radius: 30px;
+          font-weight: bold;
+          background-image: linear-gradient(#5c1010, red);
+          transform: scale(1.1, 1.1);
+          transition: all 0.5s; }
     .info__app .qr__app {
       grid-column: 1/3;
       grid-row: 3/4;
