--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
   background-size: cover;
   background-repeat: no-repeat; }
 
-.centrar, .header__pag, .grid__nosotros .formulario__boot .formulario__boot .center__cc, .grid__nosotros .titulo__nosotros, .grid__nosotros .titulo__marcas, .formulario__card, .info__app .info__texto, .info__app .boton__cuadro--app .boton__app, .info__app .boton__cuadro--app .boton__app:hover, .titulo__evento {
+.centrar, .header__pag, .grid__nosotros .formulario__boot .center__cc, .grid__nosotros .titulo__nosotros, .grid__nosotros .titulo__marcas, .formulario__card, .info__app .info__texto, .info__app .boton__cuadro--app .boton__app, .info__app .boton__cuadro--app .boton__app:hover, .titulo__evento {
   justify-content: center;
   align-items: center; }
 
@@ -265,7 +265,7 @@ header {
   background-size: cover;
   background-repeat: no-repeat; }
 
-.centrar, .header__pag, .grid__nosotros .formulario__boot .formulario__boot .center__cc, .grid__nosotros .titulo__nosotros, .grid__nosotros .titulo__marcas, .formulario__card, .info__app .info__texto, .info__app .boton__cuadro--app .boton__app, .info__app .boton__cuadro--app .boton__app:hover, .titulo__evento {
+.centrar, .header__pag, .grid__nosotros .formulario__boot .center__cc, .grid__nosotros .titulo__nosotros, .grid__nosotros .titulo__marcas, .formulario__card, .info__app .info__texto, .info__app .boton__cuadro--app .boton__app, .info__app .boton__cuadro--app .boton__app:hover, .titulo__evento {
   justify-content: center;
   align-items: center; }
 
@@ -413,13 +413,10 @@ header {
   .grid__nosotros .formulario__boot {
     grid-column: 6/7;
     grid-row: 1/5; }
-    .grid__nosotros .formulario__boot .formulario__boot {
-      grid-column: 6/7;
-      grid-row: 1/5; }
-      .grid__nosotros .formulario__boot .formulario__boot .center__cc {
-        display: flex; }
-        .grid__nosotros .formulario__boot .formulario__boot .center__cc .titulo__contacto {
-          color: white; }
+    .grid__nosotros .formulario__boot .center__cc {
+      display: flex; }
+      .grid__nosotros .formulario__boot .center__cc .titulo__contacto {
+        color: white; }
   .grid__nosotros .titulo__nosotros {
     display: grid;
     grid-column: 1/5;
@@ -918,21 +915,33 @@ div {
     grid-template-rows: auto;
     gap: 10px;
     background-color: black; }
-  .titulo__nosotros {
-    display: grid;
-    grid-column: 1/2;
-    grid-row: 1/1;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    background-color: black;
-    text-align: center;
-    width: 97vw; }
-    .titulo__nosotros .titulo__nosotros--txt {
+    .grid__nosotros .formulario__boot {
+      grid-column: 1/2;
+      grid-row: 4/4;
+      width: 100vw;
+      flex-direction: column;
+      background-color: black; }
+      .grid__nosotros .formulario__boot .center__cc {
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+    .grid__nosotros .titulo__nosotros {
       display: grid;
       grid-column: 1/2;
-      grid-row: auto;
+      grid-row: 1/1;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      background-color: black;
+      text-align: center;
       width: 97vw; }
+      .grid__nosotros .titulo__nosotros .titulo__nosotros--txt {
+        display: grid;
+        grid-column: 1/2;
+        grid-row: auto;
+        width: 97vw; }
+    .grid__nosotros .titulo__marcas {
+      display: none; }
   .img__iconos {
     grid-column: 1/2;
     grid-row: 2/3;
@@ -951,23 +960,12 @@ div {
     width: 100vw;
     background-image: none;
     background-color: black; }
-  .formulario__boot {
-    grid-column: 1/2;
-    grid-row: 4/4;
-    width: 100vw;
-    background-color: black; }
-  .center__cc {
-    display: flex;
-    justify-content: center;
-    align-items: center; }
   .shadow {
     width: 92%;
     height: 80%;
     margin: 15px; }
   .form-floating {
     width: 70vw; }
-  .titulo__marcas {
-    display: none; }
   .speed__marca {
     display: none; }
   .hodlmoser__marca {
